v0.4.0/_sources/gallery/lines/wiggle.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lines/wiggle.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_lines_wiggle.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_wiggle.py:


Wiggle along tracks
-------------------

The :meth:`pygmt.Figure.wiggle` method can plot z = f(x,y) anomalies along
tracks. ``x``, ``y``, ``z`` can be specified as 1d arrays or within a specified
file. The ``scale`` parameter can be used to set the scale of the anomaly in
data/distance units. The positive and/or negative areas can be filled with
color by setting the ``color`` parameter.

.. GENERATED FROM PYTHON SOURCE LINES 11-39



.. image:: /gallery/lines/images/sphx_glr_wiggle_001.png
    :alt: wiggle
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default


    import numpy as np
    import pygmt

    # Create (x, y, z) triplets
    x = np.arange(-7, 7, 0.1)
    y = np.zeros(x.size)
    z = 50 * np.exp(-((x / 3) ** 2)) * np.cos(2 * np.pi * x)

    fig = pygmt.Figure()
    fig.basemap(region=[-8, 12, -1, 1], projection="X10c", frame=["Snlr", "xa2f1"])
    fig.wiggle(
        x=x,
        y=y,
        z=z,
        # Set anomaly scale to "20c"
        scale="20c",
        # Fill positive and negative areas red and gray, respectively
        color=["red+p", "gray+n"],
        # Set the outline width to "1.0p"
        pen="1.0p",
        # Draw a blue track with a width of 0.5 points
        track="0.5p,blue",
        # Plot a vertical scale bar at the right middle. The bar length is 100 in
        # data (z) units. Set the z unit label to "nT".
        position="jRM+w100+lnT",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.024 seconds)


.. _sphx_glr_download_gallery_lines_wiggle.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: wiggle.py <wiggle.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: wiggle.ipynb <wiggle.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
